[gd_scene load_steps=7 format=2]

[ext_resource path="res://source/menu/hints/HintMenu.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.470588 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_right = 8
corner_radius_bottom_left = 8
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=4]
draw_center = false
border_width_left = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 7
corner_radius_bottom_left = 7
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 2
corner_radius_top_left = 7
corner_radius_bottom_left = 7
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=5]
draw_center = false
border_width_right = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false
border_width_right = 2
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_detail = 1
anti_aliasing = false

[node name="HintMenu" type="Panel"]
margin_right = 139.0
margin_bottom = 64.0
custom_styles/panel = SubResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
mouse_filter = 2
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="CenterContainer" parent="HBoxContainer"]
margin_right = 16.0
margin_bottom = 60.0
rect_min_size = Vector2( 16, 0 )
mouse_filter = 2

[node name="ButtonLeft" type="Button" parent="HBoxContainer/Left"]
margin_left = 2.0
margin_top = 23.0
margin_right = 14.0
margin_bottom = 37.0
rect_min_size = Vector2( 12, 12 )
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
enabled_focus_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 20.0
margin_right = 115.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBox" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 95.0
margin_bottom = 46.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="TextLabel" type="Label" parent="HBoxContainer/VBoxContainer/TextBox"]
margin_left = 4.0
margin_top = 16.0
margin_right = 91.0
margin_bottom = 30.0
align = 1
valign = 1
autowrap = true

[node name="PagesLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 95.0
margin_bottom = 60.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="CenterContainer" parent="HBoxContainer"]
margin_left = 119.0
margin_right = 135.0
margin_bottom = 60.0
rect_min_size = Vector2( 16, 0 )
mouse_filter = 2

[node name="ButtonRight" type="Button" parent="HBoxContainer/Right"]
margin_left = 2.0
margin_top = 23.0
margin_right = 14.0
margin_bottom = 37.0
rect_min_size = Vector2( 12, 12 )
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
enabled_focus_mode = 0
[connection signal="mouse_entered" from="HBoxContainer/Left/ButtonLeft" to="." method="_on_ButtonLeft_mouse_entered"]
[connection signal="pressed" from="HBoxContainer/Left/ButtonLeft" to="." method="_on_ButtonLeft_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/Right/ButtonRight" to="." method="_on_ButtonRight_mouse_entered"]
[connection signal="pressed" from="HBoxContainer/Right/ButtonRight" to="." method="_on_ButtonRight_pressed"]
